基本をgenericに変えた

--- a/original-theme/public/style.css
+++ b/original-theme/public/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name:     Original-theme
 Theme URI:      
-Description:    Astra child theme.
+Description:    Generic child theme.
 Author:         Junsei Nagao
 Author URI:     
-Template:       astra
+Template:       generic
 Version:        0.1.0
 */
